# ray-tracer

./: .gitignore  .gitmodules  CMakeLists.txt  ILI9341framework.cpp  ILI9341framework.h  Makefile  README  README.md  Readme.md  _img_t  application.h  array.h  camera.cpp  camera.h  config.h  img  install_prereqs.sh  light.h  main.cpp  minimal2  object.h  plane.cpp  plane.h  ray-tracer.sln  ray-tracer.vcxproj  ray-tracer.vcxproj.filters  ray.h  raytracer.cpp  raytracer.h  reverse_sphere.h  sdlframework.cpp  sdlframework.h  sphere.cpp  sphere.h  transformation.h  update_config.sh  util.cpp  util.h  vec.h  windowframework.cpp  (+1 more)
build-mega2560/: ray-tracer.elf  ray-tracer.hex
save-images/: display_image.cpp  display_samples.sh  generate_samples.sh  image-list.txt  img  img1  img2  img3  load_image.py  minimal  minimal2  refraction  ring  ring2  save_image.py  shadows  shadows2  straight  tilted  translate_image.py
